# ros_kortex

iris/: CMakeLists.txt  package.xml  setup.py
iris/launch/: control.launch  control_start.launch  robot_start.launch  setup.launch
iris/src/: iris_control.py  keyboard_teleop.py  torque_control.py
iris_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
iris_gui/launch/: iris_gui.launch  single_camera.launch  stereo_camera.launch
iris_gui/scripts/: iris_gui
iris_gui/src/iris_gui/: iris_gui.py  iris_gui_plugin.py
kortex_driver/: readme.md
kortex_driver/launch/: kortex_driver.launch  kortex_dual_driver.launch
