<?xml version="1.0"?>
<package format="2">
  <name>iris_gui</name>
  <version>0.0.0</version>
  <description>The iris_gui package</description>
  <maintainer email="laurapetrich@ualberta.ca">lpetrich</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>iris</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>catkin_modules</depend>
  <depend>pluginlib</depend>
  
  <depend>geometry_msgs</depend>
  <depend version_gte="0.2.19">python_qt_binding</depend>
  <depend>python-rospkg</depend>
  <depend>rostopic</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
